load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library")
load("@aspect_bazel_lib//lib:directory_path.bzl", "directory_path")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

js_library(
    name = "eslintrc",
    srcs = [".eslintrc.cjs"],
    deps = [
      ":node_modules/@typescript-eslint/eslint-plugin",
      ":node_modules/@typescript-eslint/parser",
    ],
)

# Reach into the node_modules to find the entry points
directory_path(
    name = "eslint_entry",
    tags = ["manual"],
    directory = ":node_modules/eslint/dir",
    path = "bin/eslint.js",
)

js_binary(
    name = "eslint",
    data = [
        ":node_modules/eslint",
    ],
    entry_point = "eslint_entry",
)
