load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

eslint_bin.eslint_binary(name = "eslint")

js_library(
    name = "eslintrc",
    srcs = [".eslintrc.cjs"],
    deps = [
      ":node_modules/@typescript-eslint/eslint-plugin",
      ":node_modules/@typescript-eslint/parser",
    ],
)
