# Override http_archive for local testing
local_repository(
    name = "aspect_rules_eslint",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_eslint setup #
######################
# Fetches the rules_eslint dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@aspect_rules_eslint//eslint:repositories.bzl", "rules_eslint_dependencies")

rules_eslint_dependencies()
