load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("//tools/lint:linters.bzl", "eslint_test")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

filegroup(
    name = "css",
    srcs = ["hello.css"],
    tags = ["lint-with-stylelint"],
)

filegroup(
    name = "clean_css",
    srcs = ["clean.css"],
    tags = ["lint-with-stylelint"],
)

filegroup(
    name = "md",
    srcs = ["README.md"],
    tags = ["markdown"],
)

ts_project(
    name = "ts_dep",
    srcs = ["file-dep.ts"],
    declaration = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    deps = [],
)

ts_project(
    name = "ts",
    srcs = ["file.ts"],
    declaration = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:.swcrc",
    ),
    deps = [
        ":ts_dep",
        "//:node_modules/dayjs",
    ],
)

# Regression test for https://github.com/aspect-build/rules_lint/issues/368
eslint_test(
    name = "eslint_empty_report",
    srcs = [":ts"],
)

filegroup(
    name = "unused_import_pyi",
    srcs = ["unused_import.pyi"],
    tags = ["python"],
)
