"Demonstrates how to enforce zero-lint-tolerance policy with tests"

load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//tools:lint.bzl", "eslint_test", "flake8_test", "pmd_test")

ts_project(
    name = "no_violations",
    srcs = ["no_violations.ts"],
    tsconfig = {},
)

eslint_test(
    name = "eslint_empty_report",
    srcs = [":no_violations"],
)

flake8_test(
    name = "flake8",
    srcs = ["//src:unused_import"],
    # Expected to fail based on current content of the file.
    # Normally you'd fix the file instead of tagging this test.
    tags = ["manual"],
)

pmd_test(
    name = "pmd",
    srcs = ["//src:foo"],
    # Expected to fail based on current content of the file.
    # Normally you'd fix the file instead of tagging this test.
    tags = ["manual"],
)

eslint_test(
    name = "eslint",
    srcs = ["//src:ts"],
    # Expected to fail based on current content of the file.
    # Normally you'd fix the file instead of tagging this test.
    tags = ["manual"],
)
