"Bazel dependencies for C++ formatting and linting example"

bazel_dep(name = "aspect_rules_lint")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "toolchains_llvm", version = "1.1.2")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "bazel_features", version = "1.29.0")
bazel_dep(name = "platforms", version = "0.0.8")

local_path_override(
    module_name = "aspect_rules_lint",
    path = "../..",
)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "16.0.0",
        "darwin-x86_64": "15.0.7",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

# C++ linter tools
lint_tools = use_extension("@aspect_rules_lint//lint:extensions.bzl", "tools")
lint_tools.cppcheck()
use_repo(
    lint_tools,
    "cppcheck_linux",
    "cppcheck_macos",
)
