"Bazel dependencies for the go.mod / go.work formatting example"

bazel_dep(name = "aspect_rules_lint")
bazel_dep(name = "rules_multitool", version = "0.11.0")

local_path_override(
    module_name = "aspect_rules_lint",
    path = "../..",
)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:modfmt.lock.json")
use_repo(multitool, "multitool")
