"Bazel dependencies for Go formatting example"

bazel_dep(name = "aspect_rules_lint")
bazel_dep(name = "rules_go", version = "0.52.0")

local_path_override(
    module_name = "aspect_rules_lint",
    path = "../..",
)

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.23.5",
)
use_repo(go_sdk, "go_sdk")
