"Bazel dependencies for Kotlin formatting and linting example"

bazel_dep(name = "aspect_rules_lint")

bazel_dep(name = "gazelle", version = "0.43.0", dev_dependency = True)

bazel_dep(name = "rules_kotlin", version = "1.9.0")
bazel_dep(name = "rules_java", version = "8.5.0")
bazel_dep(name = "bazel_skylib", version = "1.4.2")

local_path_override(
    module_name = "aspect_rules_lint",
    path = "../..",
)

rules_lint_go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
rules_lint_go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/reviewdog/reviewdog",
)

format_tools = use_extension("@aspect_rules_lint//format:extensions.bzl", "tools")
format_tools.ktfmt()
use_repo(format_tools, "ktfmt")

lint_tools = use_extension("@aspect_rules_lint//lint:extensions.bzl", "tools")
lint_tools.ktlint()
use_repo(
    lint_tools,
    "com_github_pinterest_ktlint",
)
