"Bazel dependencies for other formatters example"

bazel_dep(name = "aspect_rules_lint")
bazel_dep(name = "aspect_rules_js", version = "2.0.0")
bazel_dep(name = "rules_python", version = "0.26.0")
bazel_dep(name = "bazel_features", version = "1.29.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.3.3")

local_path_override(
    module_name = "aspect_rules_lint",
    path = "../..",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    name = "pip",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
