"Bazel dependencies for Protobuf formatting and linting example"

bazel_dep(name = "aspect_rules_lint")
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "rules_buf", version = "0.5.2")
bazel_dep(name = "bazel_features", version = "1.29.0")

local_path_override(
    module_name = "aspect_rules_lint",
    path = "../..",
)

# Buf toolchain
buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")

# see https://github.com/bufbuild/buf/releases
buf.toolchains(version = "v1.34.0")
use_repo(buf, "rules_buf_toolchains")
