"Bazel dependencies for Protobuf formatting and linting example"

bazel_dep(name = "aspect_rules_lint")

bazel_dep(name = "gazelle", version = "0.43.0", dev_dependency = True)

bazel_dep(name = "protobuf", version = "33.3.bcr.1")
single_version_override(
    module_name = "protobuf",
    version = "33.3.bcr.1",
)

bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "rules_buf", version = "0.5.2")

local_path_override(
    module_name = "aspect_rules_lint",
    path = "../..",
)

rules_lint_go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
rules_lint_go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/reviewdog/reviewdog",
)

# Buf toolchain
buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")

# see https://github.com/bufbuild/buf/releases
buf.toolchains(version = "v1.34.0")
use_repo(buf, "rules_buf_toolchains")
